==> damon-yun/WICED_Wi-Fi_43xxx/WICED/platform/MCU/PSoC6/peripherals/platform_gpio.c <==
#include "stdint.h"
#include "string.h"
#include "platform_peripheral.h"
#include "platform_isr.h"
#include "platform_isr_interface.h"
#include "wwd_rtos_isr.h"
#include "wwd_assert.h"
#define PLATFORM_MAX_PORT_NUM           (15)
#define PLATFORM_MAX_PINS_ON_PORT       (8)
#define PLATFORM_GPIO_TOTAL_PIN_NUMBERS (PLATFORM_MAX_PORT_NUM * PLATFORM_MAX_PINS_ON_PORT)
#define PLATFORM_GPIO_TABLE_SIZE  ( sizeof( platform_gpio_table ) / sizeof( platform_gpio_table[0] ) )

platform_result_t platform_gpio_init( const platform_gpio_t* gpio, platform_pin_config_t config )
{
    uint32_t drive_mode = CY_GPIO_DM_STRONG_IN_OFF;
    uint32_t init_outval = 0;
    uint32_t index = 0;

    GPIO_PRT_Type *base = NULL;

    if ( gpio == NULL )
    {
        return PLATFORM_UNSUPPORTED;
    }

    if ( is_valid_pin( gpio->port_num, gpio->pin_num, gpio->hsiom, &base ) == WICED_FALSE )
    {
        return PLATFORM_UNSUPPORTED;
    }

    switch ( config )
    {
        case INPUT_PULL_UP:
            init_outval = 1;
            drive_mode = CY_GPIO_DM_PULLUP;
            break;

        case INPUT_PULL_DOWN:
            init_outval = 0;
            drive_mode = CY_GPIO_DM_PULLDOWN;
            break;

        case INPUT_HIGH_IMPEDANCE:
            init_outval = 0;
            drive_mode = CY_GPIO_DM_HIGHZ;
            break;

        case OUTPUT_PUSH_PULL:
            init_outval = 0;
            drive_mode = CY_GPIO_DM_STRONG_IN_OFF;
            break;

        case OUTPUT_OPEN_DRAIN_NO_PULL:
            init_outval = 0;
            drive_mode = CY_GPIO_DM_OD_DRIVESLOW_IN_OFF;
            break;

        case OUTPUT_OPEN_DRAIN_PULL_UP:
            init_outval = 1;
            drive_mode = CY_GPIO_DM_OD_DRIVESHIGH_IN_OFF;
            break;

        default:
            wiced_assert( "Not supported", 0 );
            return WICED_PLATFORM_UNSUPPORTED;
    }


    Cy_GPIO_Pin_FastInit( base, gpio->pin_num, drive_mode, init_outval, gpio->hsiom );

    if (get_gpio_port_pin_index ( gpio, &index ) == WICED_FALSE ) {
        return PLATFORM_UNSUPPORTED;
    }

    gpio_pin_cfg[index].valid_user_cfg = WICED_TRUE;
    gpio_pin_cfg[index].user_hsiom = gpio->hsiom;
    gpio_pin_cfg[index].config = config;

    return PLATFORM_SUCCESS;
}

platform_result_t platform_gpio_deinit( const platform_gpio_t* gpio )
{
    uint32_t index = 0;
    uint32_t drive_mode = CY_GPIO_DM_HIGHZ;
    uint32_t init_outval = 0;
    uint32_t init_hsiom = 0;      /* Should be default hsiom value for generic GPIO, which is 0 for PSoC6 */

    GPIO_PRT_Type *base = NULL;

    if ( gpio == NULL )
    {
        return PLATFORM_UNSUPPORTED;
    }

    if ( is_valid_pin( gpio->port_num, gpio->pin_num, gpio->hsiom, &base ) == WICED_FALSE )
    {
        return PLATFORM_UNSUPPORTED;
    }

    if (get_gpio_port_pin_index ( gpio, &index ) == WICED_FALSE ) {
        return PLATFORM_UNSUPPORTED;
    }

    gpio_pin_cfg[index].valid_user_cfg = WICED_FALSE;
    gpio_pin_cfg[index].user_hsiom = 0;
    gpio_pin_cfg[index].config = 0;

    Cy_GPIO_Pin_FastInit( base, gpio->pin_num, drive_mode, init_outval, init_hsiom );

    return PLATFORM_SUCCESS;
}

platform_result_t platform_gpio_output_high( const platform_gpio_t* gpio )
{
    GPIO_PRT_Type *base = NULL;

    if ( gpio == NULL )
    {
        return PLATFORM_UNSUPPORTED;
    }

    if ( is_valid_pin( gpio->port_num, gpio->pin_num, gpio->hsiom, &base ) == WICED_FALSE )
    {
        return PLATFORM_UNSUPPORTED;
    }

    Cy_GPIO_Set( base, gpio->pin_num );

    return PLATFORM_SUCCESS;
}

platform_result_t platform_gpio_output_low( const platform_gpio_t* gpio )
{
    GPIO_PRT_Type *base = NULL;

    if ( gpio == NULL )
    {
        return PLATFORM_UNSUPPORTED;
    }

    if ( is_valid_pin( gpio->port_num, gpio->pin_num, gpio->hsiom, &base ) == WICED_FALSE )
    {
        return PLATFORM_UNSUPPORTED;
    }

    Cy_GPIO_Clr( base, gpio->pin_num );

    return PLATFORM_SUCCESS;
}

wiced_bool_t platform_gpio_input_get( const platform_gpio_t* gpio )
{
    GPIO_PRT_Type *base = NULL;
    uint32_t val = 0;

    wiced_assert( "bad argument", ( gpio != NULL ) );

    base = Cy_GPIO_PortToAddr( gpio->port_num );

    val = Cy_GPIO_Read( base, gpio->pin_num );

    if ( val )
    {
       return ( WICED_TRUE );
    }
    return ( WICED_FALSE );
}

platform_result_t platform_gpio_irq_enable( const platform_gpio_t* gpio, platform_gpio_irq_trigger_t trigger, platform_gpio_irq_callback_t handler, void* arg )
{
    GPIO_PRT_Type *base = NULL;
    uint32_t cc_gpio_bit = 0;
    uint32_t gpio_trigger_type = CY_GPIO_INTR_DISABLE; /* Disable by default */

    if ( gpio == NULL )
    {
        return PLATFORM_UNSUPPORTED;
    }

    if ( is_valid_pin( gpio->port_num, gpio->pin_num, gpio->hsiom, &base ) == WICED_FALSE )
    {
        return PLATFORM_UNSUPPORTED;
    }

    if ( get_gpio_port_pin_index( gpio, &cc_gpio_bit ) == WICED_FALSE )
    {
        return PLATFORM_UNSUPPORTED;
    }

    /* Identify the GPIO interrupt trigger type */
    switch (trigger)
    {
         case IRQ_TRIGGER_BOTH_EDGES:
             gpio_trigger_type = CY_GPIO_INTR_BOTH;
             break;

         case IRQ_TRIGGER_RISING_EDGE:
             gpio_trigger_type = CY_GPIO_INTR_RISING;
             break;

         case IRQ_TRIGGER_FALLING_EDGE:
             gpio_trigger_type = CY_GPIO_INTR_FALLING;
             break;

         case IRQ_TRIGGER_LEVEL_HIGH:
         case IRQ_TRIGGER_LEVEL_LOW:
         default:
             wiced_assert("bad trigger type", 0);
             return PLATFORM_UNSUPPORTED;
    }


    gpio_irq_data[cc_gpio_bit].handler = handler;
    gpio_irq_data[cc_gpio_bit].arg = arg;
    gpio_irq_data[cc_gpio_bit].trigger = trigger;


    /* Clear previously pending interrupts */
    Cy_GPIO_ClearInterrupt( base, gpio->pin_num );

    /* Set the trigger type */
    Cy_GPIO_SetInterruptEdge( base, gpio->pin_num, gpio_trigger_type );


    /* Enable interrupt on this port/pin */
    Cy_GPIO_SetInterruptMask( base, gpio->pin_num, 1 );

    return PLATFORM_SUCCESS;
}

platform_result_t platform_gpio_irq_disable( const platform_gpio_t* gpio )
{
    GPIO_PRT_Type *base = NULL;
    uint32_t cc_gpio_bit = 0;
    uint32_t gpio_trigger_type = CY_GPIO_INTR_DISABLE; /* Disable by default */

    if ( gpio == NULL )
    {
        return PLATFORM_UNSUPPORTED;
    }

    if ( is_valid_pin( gpio->port_num, gpio->pin_num, gpio->hsiom, &base ) == WICED_FALSE )
    {
        return PLATFORM_UNSUPPORTED;
    }

    if ( get_gpio_port_pin_index( gpio, &cc_gpio_bit ) == WICED_FALSE )
    {
        return PLATFORM_UNSUPPORTED;
    }

    /* Clear previously pending interrupts */
    Cy_GPIO_ClearInterrupt( base, gpio->pin_num );

    /* Set the trigger type */
    Cy_GPIO_SetInterruptEdge( base, gpio->pin_num, gpio_trigger_type );

    /* Mask interrupt on this port/pin */
    Cy_GPIO_SetInterruptMask( base, gpio->pin_num, 0 );

    gpio_irq_data[cc_gpio_bit].handler = NULL;
    gpio_irq_data[cc_gpio_bit].arg = NULL;
    gpio_irq_data[cc_gpio_bit].trigger = gpio_trigger_type;

    return PLATFORM_SUCCESS;
}
